apps/web/environments/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - web-uat.metacpan.org
      secretName: web-uat-tls
  rules:
    - host: web-uat.metacpan.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 80
